# basemath

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  mypy.ini  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: build.yml
basemath/: basemath.py
examples/: Basemath Example - binary_flat.ipynb  Basemath Example - binary_sigUplift.ipynb  Basemath Example - continuous_sigUplift.ipynb  Basemath Example - flat.ipynb  Basemath Example - significant uplift.ipynb  Basemath Example.ipynb
tests/basemath/: test_basemath.py
tests/basemath_analysis/: test_basemath.py
