[tool.poetry]
name = "basemath-analysis"
version = "0.1.1"
description = "A library for BaseMath's test, a novel Group Sequential Testing approach that enables the user to stop early."
authors = ["Data Products GYG <engineering.data-products@getyourguide.com>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/getyourguide/basemath"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.14.0"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
